--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Begin menu -->
         <nav id="menu">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#" aria-current="true">Home</a></li>
                 <li><a href="#">Destination</a></li>
                 <li><a href="#">Crew</a></li>
                 <li><a href="#">Technology</a></li>
