Added links to destination page

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <!-- Begin menu -->
         <nav id="menu">
             <ul>
-                <li><a href="#" aria-current="true">Home</a></li>
-                <li><a href="#">Destination</a></li>
+                <li><a href="./" aria-current="true">Home</a></li>
+                <li><a href="destination.html">Destination</a></li>
                 <li><a href="#">Crew</a></li>
                 <li><a href="#">Technology</a></li>
             </ul>
@@ -76,7 +76,7 @@
         <main id="content">
             <h2>So, you want to travel to <span>Space</span></h2>
             <p>Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
-            <p><a href="#">Explore</a></p>
+            <p><a href="destination.html">Explore</a></p>
         </main>
         <!-- End content -->
 
