Fixed OpenGraph language into locale

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <meta property="og:image" content="https://webdevbynight.github.io/space-tourism-website/android-chrome-512x512.png">
         <meta property="og:image:alt" content="Logo Space tourism website">
         <meta property="og:type" content="website">
-        <meta property="og:language" content="en_US">
+        <meta property="og:locale" content="en_US">
         <!-- End Open Graph -->
 
     </head>
