Styled destination page for small screens

--- a/destination.html
+++ b/destination.html
@@ -85,7 +85,7 @@
             <!-- Begin article -->
             <article>
                 
-                <h1>Pick your destination</h1>
+                <h1 data-article-number="1">Pick your destination</h1>
     
                 <!-- Begin destination card -->
                 <section id="destination-moon" class="card">
