--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <ul>
                 <li><a href="./" aria-current="true">Home</a></li>
                 <li><a href="destination.html">Destination</a></li>
-                <li><a href="#">Crew</a></li>
+                <li><a href="crew.html">Crew</a></li>
                 <li><a href="#">Technology</a></li>
             </ul>
         </nav>
