Updated HTML structure of crew page with added responsive illustrations

--- a/crew.html
+++ b/crew.html
@@ -92,31 +92,31 @@
                     <h2><span>Commander</span> Douglas Hurley</h2>
                     <picture>
                         <source
-                            srcset="images/moon-desktop@4x.webp 4x,
-                                images/moon-desktop@3x.webp 3x,
-                                images/moon-desktop@2x.webp 2x,
-                                images/moon-desktop.webp 1x"
-                            width="445"
-                            height="445"
+                            srcset="images/douglas-hurley-desktop@4x.webp 4x,
+                                images/douglas-hurley-desktop@3x.webp 3x,
+                                images/douglas-hurley-desktop@2x.webp 2x,
+                                images/douglas-hurley-desktop.webp 1x"
+                            width="569"
+                            height="702"
                             media="(min-width: 82.9375em)"
                         >
                         <source
-                            srcset="images/moon-tablet@4x.webp 4x,
-                                images/moon-tablet@3x.webp 3x,
-                                images/moon-tablet@2x.webp 2x,
-                                images/moon-tablet.webp 1x"
-                            width="300"
-                            height="300"
+                            srcset="images/douglas-hurley-tablet@4x.webp 4x,
+                                images/douglas-hurley-tablet@3x.webp 3x,
+                                images/douglas-hurley-tablet@2x.webp 2x,
+                                images/douglas-hurley-tablet.webp 1x"
+                            width="458"
+                            height="532"
                             media="(min-width: 37.5em)"
                         >
                         <img
-                            src="images/moon-mobile.webp"
-                            srcset="images/moon-mobile@4x.webp 4x,
-                                images/moon-mobile@3x.webp 3x,
-                                images/moon-mobile@2x.webp 2x"
+                            src="images/douglas-hurley-mobile.webp"
+                            srcset="images/douglas-hurley-mobile@4x.webp 4x,
+                                images/douglas-hurley-mobile@3x.webp 3x,
+                                images/douglas-hurley-mobile@2x.webp 2x"
                             alt=""
-                            width="170"
-                            height="170"
+                            width="178"
+                            height="222"
                         >
                     </picture>
                     <p>Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former <abbr title="National Aeronautics and Space Administration">NASA</abbr> astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.</p>
@@ -128,31 +128,31 @@
                     <h2><span>Mission Specialist</span> Mark Shuttleworth</h2>
                     <picture>
                         <source
-                            srcset="images/mars-desktop@4x.webp 4x,
-                                images/mars-desktop@3x.webp 3x,
-                                images/mars-desktop@2x.webp 2x,
-                                images/mars-desktop.webp 1x"
-                            width="445"
-                            height="445"
+                            srcset="images/mark-shuttleworth-desktop@4x.webp 4x,
+                                images/mark-shuttleworth-desktop@3x.webp 3x,
+                                images/mark-shuttleworth-desktop@2x.webp 2x,
+                                images/mark-shuttleworth-desktop.webp 1x"
+                            width="454"
+                            height="654"
                             media="(min-width: 82.9375em)"
                         >
                         <source
-                            srcset="images/mars-tablet@4x.webp 4x,
-                                images/mars-tablet@3x.webp 3x,
-                                images/mars-tablet@2x.webp 2x,
-                                images/mars-tablet.webp 1x"
-                            width="300"
-                            height="300"
+                            srcset="images/mark-shuttleworth-tablet@4x.webp 4x,
+                                images/mark-shuttleworth-tablet@3x.webp 3x,
+                                images/mark-shuttleworth-tablet@2x.webp 2x,
+                                images/mark-shuttleworth-tablet.webp 1x"
+                            width="369"
+                            height="532"
                             media="(min-width: 37.5em)"
                         >
                         <img
-                            src="images/mars-mobile.webp"
-                            srcset="images/mars-mobile@4x.webp 4x,
-                                images/mars-mobile@3x.webp 3x,
-                                images/mars-mobile@2x.webp 2x"
+                            src="images/mark-shuttleworth-mobile.webp"
+                            srcset="images/mark-shuttleworth-mobile@4x.webp 4x,
+                                images/mark-shuttleworth-mobile@3x.webp 3x,
+                                images/mark-shuttleworth-mobile@2x.webp 2x"
                             alt=""
-                            width="170"
-                            height="170"
+                            width="154"
+                            height="222"
                         >
                     </picture>
                     <p>Mark Richard Shuttleworth is the founder and <abbr title="Chief Executive Officer">CEO</abbr> of Canonical, the company behind the Linux-based Ubuntu operating system. Shuttleworth became the first South African to travel to space as a space tourist.</p>
@@ -164,31 +164,31 @@
                     <h2><span>Pilot</span> Victor Glover</h2>
                     <picture>
                         <source
-                            srcset="images/europa-desktop@4x.webp 4x,
-                                images/europa-desktop@3x.webp 3x,
-                                images/europa-desktop@2x.webp 2x,
-                                images/europa-desktop.webp 1x"
-                            width="445"
-                            height="445"
+                            srcset="images/victor-glover-desktop@4x.webp 4x,
+                                images/victor-glover-desktop@3x.webp 3x,
+                                images/victor-glover-desktop@2x.webp 2x,
+                                images/victor-glover-desktop.webp 1x"
+                            width="555"
+                            height="654"
                             media="(min-width: 82.9375em)"
                         >
                         <source
-                            srcset="images/europa-tablet@4x.webp 4x,
-                                images/europa-tablet@3x.webp 3x,
-                                images/europa-tablet@2x.webp 2x,
-                                images/europa-tablet.webp 1x"
-                            width="300"
-                            height="300"
+                            srcset="images/victor-glover-tablet@4x.webp 4x,
+                                images/victor-glover-tablet@3x.webp 3x,
+                                images/victor-glover-tablet@2x.webp 2x,
+                                images/victor-glover-tablet.webp 1x"
+                            width="434"
+                            height="532"
                             media="(min-width: 37.5em)"
                         >
                         <img
-                            src="images/europa-mobile.webp"
-                            srcset="images/europa-mobile@4x.webp 4x,
-                                images/europa-mobile@3x.webp 3x,
-                                images/europa-mobile@2x.webp 2x"
+                            src="images/victor-glover-mobile.webp"
+                            srcset="images/victor-glover-mobile@4x.webp 4x,
+                                images/victor-glover-mobile@3x.webp 3x,
+                                images/victor-glover-mobile@2x.webp 2x"
                             alt=""
-                            width="170"
-                            height="170"
+                            width="181"
+                            height="222"
                         >
                     </picture>
                     <p>Pilot on the first operational flight of the SpaceX Crew Dragon to the International Space Station. Glover is a commander in the U.S. Navy where he pilots an F/A-18.He was a crew member of Expedition 64, and served as a station systems flight engineer.</p>
@@ -200,40 +200,34 @@
                     <h2><span>Flight Engineer</span> Anousheh Ansari</h2>
                     <picture>
                         <source
-                            srcset="images/titan-desktop@4x.webp 4x,
-                                images/titan-desktop@3x.webp 3x,
-                                images/titan-desktop@2x.webp 2x,
-                                images/titan-desktop.webp 1x"
-                            width="445"
-                            height="445"
+                            srcset="images/anousheh-ansari-desktop@4x.webp 4x,
+                                images/anousheh-ansari-desktop@3x.webp 3x,
+                                images/anousheh-ansari-desktop@2x.webp 2x,
+                                images/anousheh-ansari-desktop.webp 1x"
+                            width="616"
+                            height="606"
                             media="(min-width: 82.9375em)"
                         >
                         <source
-                            srcset="images/titan-tablet@4x.webp 4x,
-                                images/titan-tablet@3x.webp 3x,
-                                images/titan-tablet@2x.webp 2x,
-                                images/titan-tablet.webp 1x"
-                            width="300"
-                            height="300"
+                            srcset="images/anousheh-ansari-tablet@4x.webp 4x,
+                                images/anousheh-ansari-tablet@3x.webp 3x,
+                                images/anousheh-ansari-tablet@2x.webp 2x,
+                                images/anousheh-ansari-tablet.webp 1x"
+                            width="540"
+                            height="532"
                             media="(min-width: 37.5em)"
                         >
                         <img
-                            src="images/titan-mobile.webp"
-                            srcset="images/titan-mobile@4x.webp 4x,
-                                images/titan-mobile@3x.webp 3x,
-                                images/titan-mobile@2x.webp 2x"
+                            src="images/anousheh-ansari-mobile.webp"
+                            srcset="images/anousheh-ansari-mobile@4x.webp 4x,
+                                images/anousheh-ansari-mobile@3x.webp 3x,
+                                images/anousheh-ansari-mobile@2x.webp 2x"
                             alt=""
-                            width="170"
-                            height="170"
+                            width="227"
+                            height="223"
                         >
                     </picture>
                     <p>Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems. Ansari was the fourth self-funded space tourist, the first self-funded woman to fly to the <abbr title="International Space Station">ISS</abbr>, and the first Iranian in space.</p>
-                    <dl>
-                        <dt><abbr title="Average">Avg.</abbr> distance</dt>
-                        <dd>1.6 <abbr title="billion">bil.</abbr> <abbr title="kilometers">km</abbr></dd>
-                        <dt><abbr title="Estimated">Est.</abbr> travel time</dt>
-                        <dd>7 years</dd>
-                    </dl>
                 </section>
                 <!-- End crew card -->
 
