Added HTML structure for technology page, links to that page and photos illustrating it

--- a/crew.html
+++ b/crew.html
@@ -18,7 +18,7 @@
         <meta name="description" content="Meet your crew: Douglas Hurley, Mark Shuttleworth, Victor Glover, Anousheh Ansari">
 
         <!-- Begin canonical URL -->
-        <link rel="canonical" href="https://webdevbynight.github.io/space-tourism-website/destination.html">
+        <link rel="canonical" href="https://webdevbynight.github.io/space-tourism-website/crew.html">
         <!-- End canonical URL -->
 
         <!-- Begin Twitter card -->
@@ -74,7 +74,7 @@
                 <li><a href="./">Home</a></li>
                 <li><a href="destination.html">Destination</a></li>
                 <li><a href="crew.html" aria-current="true">Crew</a></li>
-                <li><a href="#">Technology</a></li>
+                <li><a href="technology.html">Technology</a></li>
             </ul>
         </nav>
         <!-- End menu -->
