--- a/destination.html
+++ b/destination.html
@@ -74,7 +74,7 @@
                 <li><a href="./">Home</a></li>
                 <li><a href="destination.html" aria-current="true">Destination</a></li>
                 <li><a href="crew.html">Crew</a></li>
-                <li><a href="#">Technology</a></li>
+                <li><a href="technology.html">Technology</a></li>
             </ul>
         </nav>
         <!-- End menu -->
@@ -122,7 +122,7 @@
                     <p>See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
                     <dl>
                         <dt><abbr title="Average">Avg.</abbr> distance</dt>
-                        <dd>384,400 <abbr title="kilometers">km</abbr></dd>
+                        <dd>384,400 <abbr title="kilometres">km</abbr></dd>
                         <dt><abbr title="Estimated">Est.</abbr> travel time</dt>
                         <dd>3 days</dd>
                     </dl>
@@ -164,7 +164,7 @@
                     <p>Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!</p>
                     <dl>
                         <dt><abbr title="Average">Avg.</abbr> distance</dt>
-                        <dd>225 <abbr title="million">mil.</abbr> <abbr title="kilometers">km</abbr></dd>
+                        <dd>225 <abbr title="million">mil.</abbr> <abbr title="kilometres">km</abbr></dd>
                         <dt><abbr title="Estimated">Est.</abbr> travel time</dt>
                         <dd>9 months</dd>
                     </dl>
@@ -206,7 +206,7 @@
                     <p>The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.</p>
                     <dl>
                         <dt><abbr title="Average">Avg.</abbr> distance</dt>
-                        <dd>628 <abbr title="million">mil.</abbr> <abbr title="kilometers">km</abbr></dd>
+                        <dd>628 <abbr title="million">mil.</abbr> <abbr title="kilometres">km</abbr></dd>
                         <dt><abbr title="Estimated">Est.</abbr> travel time</dt>
                         <dd>3 years</dd>
                     </dl>
@@ -248,7 +248,7 @@
                     <p>The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.</p>
                     <dl>
                         <dt><abbr title="Average">Avg.</abbr> distance</dt>
-                        <dd>1.6 <abbr title="billion">bil.</abbr> <abbr title="kilometers">km</abbr></dd>
+                        <dd>1.6 <abbr title="billion">bil.</abbr> <abbr title="kilometres">km</abbr></dd>
                         <dt><abbr title="Estimated">Est.</abbr> travel time</dt>
                         <dd>7 years</dd>
                     </dl>
