--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li><a href="./" aria-current="true">Home</a></li>
                 <li><a href="destination.html">Destination</a></li>
                 <li><a href="crew.html">Crew</a></li>
-                <li><a href="#">Technology</a></li>
+                <li><a href="technology.html">Technology</a></li>
             </ul>
         </nav>
         <!-- End menu -->
