Fixed media queries on source elements for images not to stretch on Safari

--- a/crew.html
+++ b/crew.html
@@ -98,7 +98,7 @@
                                 images/douglas-hurley-desktop.webp 1x"
                             width="569"
                             height="702"
-                            media="(min-width: 62.3125em)"
+                            media="(min-width: 997px)"
                         >
                         <source
                             srcset="images/douglas-hurley-tablet@4x.webp 4x,
@@ -107,7 +107,7 @@
                                 images/douglas-hurley-tablet.webp 1x"
                             width="458"
                             height="532"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/douglas-hurley-mobile.webp"
@@ -134,7 +134,7 @@
                                 images/mark-shuttleworth-desktop.webp 1x"
                             width="454"
                             height="654"
-                            media="(min-width: 62.3125em)"
+                            media="(min-width: 997px)"
                         >
                         <source
                             srcset="images/mark-shuttleworth-tablet@4x.webp 4x,
@@ -143,7 +143,7 @@
                                 images/mark-shuttleworth-tablet.webp 1x"
                             width="369"
                             height="532"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/mark-shuttleworth-mobile.webp"
@@ -170,7 +170,7 @@
                                 images/victor-glover-desktop.webp 1x"
                             width="555"
                             height="654"
-                            media="(min-width: 62.3125em)"
+                            media="(min-width: 997px)"
                         >
                         <source
                             srcset="images/victor-glover-tablet@4x.webp 4x,
@@ -179,7 +179,7 @@
                                 images/victor-glover-tablet.webp 1x"
                             width="434"
                             height="532"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/victor-glover-mobile.webp"
@@ -206,7 +206,7 @@
                                 images/anousheh-ansari-desktop.webp 1x"
                             width="616"
                             height="606"
-                            media="(min-width: 82.9375em)"
+                            media="(min-width: 997px)"
                         >
                         <source
                             srcset="images/anousheh-ansari-tablet@4x.webp 4x,
@@ -215,7 +215,7 @@
                                 images/anousheh-ansari-tablet.webp 1x"
                             width="540"
                             height="532"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/anousheh-ansari-mobile.webp"
