--- a/destination.html
+++ b/destination.html
@@ -98,7 +98,7 @@
                                 images/moon-desktop.webp 1x"
                             width="445"
                             height="445"
-                            media="(min-width: 82.9375em)"
+                            media="(min-width: 1327px)"
                         >
                         <source
                             srcset="images/moon-tablet@4x.webp 4x,
@@ -107,7 +107,7 @@
                                 images/moon-tablet.webp 1x"
                             width="300"
                             height="300"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/moon-mobile.webp"
@@ -140,7 +140,7 @@
                                 images/mars-desktop.webp 1x"
                             width="445"
                             height="445"
-                            media="(min-width: 82.9375em)"
+                            media="(min-width: 1327px)"
                         >
                         <source
                             srcset="images/mars-tablet@4x.webp 4x,
@@ -149,7 +149,7 @@
                                 images/mars-tablet.webp 1x"
                             width="300"
                             height="300"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/mars-mobile.webp"
@@ -182,7 +182,7 @@
                                 images/europa-desktop.webp 1x"
                             width="445"
                             height="445"
-                            media="(min-width: 82.9375em)"
+                            media="(min-width: 1327px)"
                         >
                         <source
                             srcset="images/europa-tablet@4x.webp 4x,
@@ -191,7 +191,7 @@
                                 images/europa-tablet.webp 1x"
                             width="300"
                             height="300"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/europa-mobile.webp"
@@ -224,7 +224,7 @@
                                 images/titan-desktop.webp 1x"
                             width="445"
                             height="445"
-                            media="(min-width: 82.9375em)"
+                            media="(min-width: 1327px)"
                         >
                         <source
                             srcset="images/titan-tablet@4x.webp 4x,
@@ -233,7 +233,7 @@
                                 images/titan-tablet.webp 1x"
                             width="300"
                             height="300"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/titan-mobile.webp"
