--- a/technology.html
+++ b/technology.html
@@ -98,7 +98,7 @@
                                 images/launch-vehicle-desktop.webp 1x"
                             width="515"
                             height="527"
-                            media="(min-width: 62.3125em)"
+                            media="(min-width: 997px)"
                         >
                         <source
                             srcset="images/launch-vehicle-tablet@4x.webp 4x,
@@ -107,7 +107,7 @@
                                 images/launch-vehicle-tablet.webp 1x"
                             width="768"
                             height="310"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/launch-vehicle-mobile.webp"
@@ -134,7 +134,7 @@
                                 images/spaceport-desktop.webp 1x"
                             width="515"
                             height="527"
-                            media="(min-width: 62.3125em)"
+                            media="(min-width: 997px)"
                         >
                         <source
                             srcset="images/spaceport-tablet@4x.webp 4x,
@@ -143,7 +143,7 @@
                                 images/spaceport-tablet.webp 1x"
                             width="768"
                             height="310"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/spaceport-mobile.webp"
@@ -170,7 +170,7 @@
                                 images/space-capsule-desktop.webp 1x"
                             width="515"
                             height="527"
-                            media="(min-width: 62.3125em)"
+                            media="(min-width: 997px)"
                         >
                         <source
                             srcset="images/space-capsule-tablet@4x.webp 4x,
@@ -179,7 +179,7 @@
                                 images/space-capsule-tablet.webp 1x"
                             width="768"
                             height="310"
-                            media="(min-width: 37.5em)"
+                            media="(min-width: 600px)"
                         >
                         <img
                             src="images/space-capsule-mobile.webp"
