--- a/index.html
+++ b/index.html
@@ -41,6 +41,32 @@
         <meta property="og:locale" content="en_US">
         <!-- End Open Graph -->
 
+        <!-- Begin JSON-LD microdata -->
+        <script type="application/ld+json">
+            [
+                {
+                    "@context": "https://schema.org",
+                    "@type": "WebPage",
+                    "name": "Frontend Mentor | Space tourism website",
+                    "description": "Space tourism website: destinations, crew and technology used",
+                    "publisher":
+                    {
+                        "@type": "Organization",
+                        "name": "Frontend Mentor",
+                        "url": "https://www.frontendmentor.io/"
+                    },
+                    "sdPublisher":
+                    {
+                        "@type": "Person",
+                        "givenName": "Victor",
+                        "familyName": "Brito",
+                        "url": "https://victor-brito.dev/"
+                    }
+                }
+            ]
+        </script>
+        <!-- End JSON-LD microdata -->
+
     </head>
 
     <body class="home">
