--- a/technology.html
+++ b/technology.html
@@ -48,6 +48,59 @@
         <meta property="og:article:tag" content="Titan">
         <!-- End Open Graph -->
 
+
+
+        <!-- Begin JSON-LD microdata -->
+        <script type="application/ld+json">
+            [
+                {
+                    "@context": "https://schema.org",
+                    "@type": "WebPage",
+                    "name": "Space Launch 101 — Frontend Mentor | Space tourism website",
+                    "description": "Space Launch 101: Launch vehicle, Spaceport, Space capsule",
+                    "publisher":
+                    {
+                        "@type": "Organization",
+                        "name": "Frontend Mentor",
+                        "url": "https://www.frontendmentor.io/"
+                    },
+                    "sdPublisher":
+                    {
+                        "@type": "Person",
+                        "givenName": "Victor",
+                        "familyName": "Brito",
+                        "url": "https://victor-brito.dev/"
+                    }
+                },
+                {
+                    "@context": "https://schema.org",
+                    "@type": "BreadcrumbList",
+                    "itemListElement":
+                    [
+                        {
+                            "@type": "ListItem",
+                            "position": 1,
+                            "item":
+                            {
+                                "@id": "https://webdevbynight.github.io/space-tourism-website/",
+                                "name": "Home"
+                            }
+                        },
+                        {
+                            "@type": "ListItem",
+                            "position": 2,
+                            "item":
+                            {
+                                "@id": "https://webdevbynight.github.io/space-tourism-website/technology.html",
+                                "name": "Space Launch 101"
+                            }
+                        }
+                    ]
+                }
+            ]
+        </script>
+        <!-- End JSON-LD microdata -->
+
     </head>
 
     <body class="technology">
