--- a/technology.html
+++ b/technology.html
@@ -8,6 +8,7 @@
         <meta name="apple-mobile-web-app-title" content="Space tourism website">
         <meta name="application-name" content="Space tourism website">
         <meta name="msapplication-TileColor" content="#0b0d17">
+        <meta name="msapplication-config" content="browserconfig.xml">
         <meta name="theme-color" content="#0b0d17">
         <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
         <link rel="icon" href="favicon.svg" type="image/svg+xml">
